2025-08-31  Zhengyi Fu  <i@fuzy.me>

	Some minor updates

	* transient/values.el (gptel-menu): Add --color to
	magit-log:mode-log-mode.

	* site-lisp/gptel-config.el (kimi-assistant): Use `search_web'
	instead of the built-in `$websearch'.

	* packages.el (straight-built-in-pseudo-packages): Add `peg'.

	* init.el: Add `nerd-icons-set-font' to `server-after-make-frame-hook'.
	Configure `consult-mode-histories' for `eca-chat-mode'.
	(webjump-sites): Add "Kagi Assistant".
	(mode-specific-map): Bind "j" to `webjump'.

2025-08-29  Zhengyi Fu  <i@fuzy.me>

	Refactor xiaoshuo-mode

	* site-lisp/xiaoshuo.el (xiaoshuo-heading-regexp): Change to an
	user option.
	(xiaoshuo-content): Remove :family attribute.
	(xiaoshuo-fontset-name, xiaoshuo-ascii-font, xiaoshuo-cjk-font)
	(xiaoshuo-line-spacing): New user options.
	(xiaoshuo-mode): Apply user options.

2025-08-29  Zhengyi Fu  <i@fuzy.me>

	* init.el: Add ibuffer configuration.
	(ibuffer-saved-filter-groups): Update value.


2025-08-29  Zhengyi Fu  <i@fuzy.me>

	* init.el (+init-fontsets): Set nerd-icons fonts if nerd-icons is
	loaded.

2025-08-29  Zhengyi Fu  <i@fuzy.me>

	* packages.el: Add whisper.

2025-08-29  Zhengyi Fu  <i@fuzy.me>

	* packages.el: Add clojure-mode and inf-clojure.

2025-08-28  Zhengyi Fu  <i@fuzy.me>

	* packages.el: Add eca.

2025-08-26  Zhengyi Fu  <i@fuzy.me>

	Remove some eww configuration

	* init.el (eww+miniflux-trim, eww+kagi-trim)
	(eww-reset-current-bookmark): Remove functions.

2025-08-26  Zhengyi Fu  <i@fuzy.me>

	* packages.el (straight-built-in-pseudo-packages): Add `map'.

2025-08-26  Zhengyi Fu  <i@fuzy.me>

	* init.el: Change binding of `consult-history' from "C-c h" to
	"C-c H".

2025-08-26  Zhengyi Fu  <i@fuzy.me>

	* packages.el: Add ement.

2025-08-26  Zhengyi Fu  <i@fuzy.me>

	Optimizing startup speed

	* init.el (+init-fontsets): Set `use-default-font-for-symbols' to t.
	(+maybe-init-fontset): 	Ignore errors when initializing fonts.
	(nerd-icons): Set up nerd fonts.